@@ -1,3 +1,8 @@
+2008-07-09  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getPrinterAttributes): Fixed
+	requested_attributes parameter.
+
 2008-06-20  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.40.
